fixed horizontal scroll bar when viewing on iphone/android/ipad preview mode

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -19,7 +19,7 @@ body {
 }
 
 .wrapper {
-    width: 90%;
+    width: auto;
     margin: 0 5%;
 }
 
@@ -245,6 +245,11 @@ footer {
   padding: 4em 0 0;
   min-height: 150px;
   color: @color-swatch1;
+}
+
+footer .wrapper {
+  width: 90%;
+  margin: 0 auto;
 }
 
 footer h1, footer h2, footer h3, footer h4 {
@@ -1487,7 +1492,7 @@ footer .footer2 .widget.profile form {
 @media only screen and (max-width: 768px) {
 
   .wrapper {
-    width: 88%;
+    width: auto;
     margin: 0 auto;
   }
 
@@ -1663,7 +1668,7 @@ footer .footer2 .widget.profile form {
 @media only screen and (max-width: 480px) {
 
   .wrapper {
-    width: 90%;
+    width: auto;
     margin: 0 auto;
   }
 
